// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OutcomeSummaryBar failure only 1`] = `
<div
  className="outcome-summary-bar"
>
  <span
    className="fail"
    style={
      Object {
        "flexGrow": 3,
      }
    }
  >
    <CrossIcon />
     
    3
     
    Failed
  </span>
  <span
    className="pass"
    style={
      Object {
        "flexGrow": 0,
      }
    }
  >
    <CheckIcon />
     
    0
     
    Passed
  </span>
  <span
    className="inapplicable"
    style={
      Object {
        "flexGrow": 0,
      }
    }
  >
    <InapplicableIcon />
     
    0
     
    Not applicable
  </span>
</div>
`;

exports[`OutcomeSummaryBar failures + not applicable + passes 1`] = `
<div
  className="outcome-summary-bar"
>
  <span
    className="fail"
    style={
      Object {
        "flexGrow": 3,
      }
    }
  >
    <CrossIcon />
     
    3
     
    Failed
  </span>
  <span
    className="pass"
    style={
      Object {
        "flexGrow": 2,
      }
    }
  >
    <CheckIcon />
     
    2
     
    Passed
  </span>
  <span
    className="inapplicable"
    style={
      Object {
        "flexGrow": 3,
      }
    }
  >
    <InapplicableIcon />
     
    3
     
    Not applicable
  </span>
</div>
`;

exports[`OutcomeSummaryBar failures + not applicable only 1`] = `
<div
  className="outcome-summary-bar"
>
  <span
    className="fail"
    style={
      Object {
        "flexGrow": 3,
      }
    }
  >
    <CrossIcon />
     
    3
     
    Failed
  </span>
  <span
    className="pass"
    style={
      Object {
        "flexGrow": 0,
      }
    }
  >
    <CheckIcon />
     
    0
     
    Passed
  </span>
  <span
    className="inapplicable"
    style={
      Object {
        "flexGrow": 3,
      }
    }
  >
    <InapplicableIcon />
     
    3
     
    Not applicable
  </span>
</div>
`;

exports[`OutcomeSummaryBar failures + passes only 1`] = `
<div
  className="outcome-summary-bar"
>
  <span
    className="fail"
    style={
      Object {
        "flexGrow": 3,
      }
    }
  >
    <CrossIcon />
     
    3
     
    Failed
  </span>
  <span
    className="pass"
    style={
      Object {
        "flexGrow": 2,
      }
    }
  >
    <CheckIcon />
     
    2
     
    Passed
  </span>
  <span
    className="inapplicable"
    style={
      Object {
        "flexGrow": 0,
      }
    }
  >
    <InapplicableIcon />
     
    0
     
    Not applicable
  </span>
</div>
`;

exports[`OutcomeSummaryBar not applicable + passes only 1`] = `
<div
  className="outcome-summary-bar"
>
  <span
    className="fail"
    style={
      Object {
        "flexGrow": 0,
      }
    }
  >
    <CrossIcon />
     
    0
     
    Failed
  </span>
  <span
    className="pass"
    style={
      Object {
        "flexGrow": 2,
      }
    }
  >
    <CheckIcon />
     
    2
     
    Passed
  </span>
  <span
    className="inapplicable"
    style={
      Object {
        "flexGrow": 3,
      }
    }
  >
    <InapplicableIcon />
     
    3
     
    Not applicable
  </span>
</div>
`;

exports[`OutcomeSummaryBar not applicable only 1`] = `
<div
  className="outcome-summary-bar"
>
  <span
    className="fail"
    style={
      Object {
        "flexGrow": 0,
      }
    }
  >
    <CrossIcon />
     
    0
     
    Failed
  </span>
  <span
    className="pass"
    style={
      Object {
        "flexGrow": 2,
      }
    }
  >
    <CheckIcon />
     
    2
     
    Passed
  </span>
  <span
    className="inapplicable"
    style={
      Object {
        "flexGrow": 0,
      }
    }
  >
    <InapplicableIcon />
     
    0
     
    Not applicable
  </span>
</div>
`;

exports[`OutcomeSummaryBar passes only 1`] = `
<div
  className="outcome-summary-bar"
>
  <span
    className="fail"
    style={
      Object {
        "flexGrow": 0,
      }
    }
  >
    <CrossIcon />
     
    0
     
    Failed
  </span>
  <span
    className="pass"
    style={
      Object {
        "flexGrow": 2,
      }
    }
  >
    <CheckIcon />
     
    2
     
    Passed
  </span>
  <span
    className="inapplicable"
    style={
      Object {
        "flexGrow": 0,
      }
    }
  >
    <InapplicableIcon />
     
    0
     
    Not applicable
  </span>
</div>
`;
